// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageTable should match a snapshot with billing 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-30 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Billable Amount
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            £
            9.57
          </p>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle"
          >
            Actual Cost
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text"
          >
            £
          </p>
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle"
      >
        Breakdown
      </h2>
      <div
        class="mocked-styled-115 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="4"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Entity Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Entity Name
          </div>
          <div
            aria-label="Total Number Calls"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Total Number Calls
          </div>
          <div
            aria-label="Total Cost"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Total Cost
          </div>
          <div
            aria-label="Total Number Endpoints"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Total Number Endpoints
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name property"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Entity Name"
              >
                contacts
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name property"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Total Number Calls"
              >
                157
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name property"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Total Cost"
              >
                £1.96
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  style="font-size: 1.25rem;"
                  title="Icon image with name property"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Total Number Endpoints"
              >
                2
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-115 el-table"
              >
                <div
                  class="mock-css.
  grid-template-columns: repeat(3, 1fr);
 el-table-headers-row"
                >
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Endpoint Name
                  </div>
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Endpoint Number Calls
                  </div>
                  <div
                    class="mocked-styled-102 el-table-header"
                  >
                    Endpoint Cost
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-30 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Billable Amount
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          £
          9.57
        </p>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Actual Cost
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          £
        </p>
      </div>
    </div>
    <h2
      class="el-text-base el-subtitle"
    >
      Breakdown
    </h2>
    <div
      class="mocked-styled-115 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="4"
      role="table"
    >
      <div
        class="mocked-styled-101 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Entity Name"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Entity Name
        </div>
        <div
          aria-label="Total Number Calls"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Total Number Calls
        </div>
        <div
          aria-label="Total Cost"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Total Cost
        </div>
        <div
          aria-label="Total Number Endpoints"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Total Number Endpoints
        </div>
        <div
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name settings"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name property"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Entity Name"
            >
              contacts
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name property"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Total Number Calls"
            >
              157
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name property"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Total Cost"
            >
              £1.96
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name property"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83m-4.05 11.33h-14V8.865l7-4.67 7 4.67z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Total Number Endpoints"
            >
              2
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <div
              class="mocked-styled-115 el-table"
            >
              <div
                class="mock-css.
  grid-template-columns: repeat(3, 1fr);
 el-table-headers-row"
              >
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Endpoint Name
                </div>
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Endpoint Number Calls
                </div>
                <div
                  class="mocked-styled-102 el-table-header"
                >
                  Endpoint Cost
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UsageTable should match a snapshot with no billing 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            No results found for your selected filters
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No results found for your selected filters
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
